@startuml

title Diagramme BDD - Entités Doctrine

skinparam classAttributeIconSize 0
hide methods
hide circle

class Event {
  id: integer
  title: string
  type: string
  date: datetime_immutable
  time: string
  description: text
  tournamentFormat: string
  discordExternalId: string
  checkins: json
  rosterEntries: json
  captain: Player
  players: Player
  substitutes: Player
  matches: GameMatch
}

class GameMatch {
  id: integer
  playedAt: datetime_immutable
  mapName: string
  opponents: text
  game: string
  mode: string
  result: string
  score: string
  teamA: Team
  teamB: Team
  roster: Roster
  tournament: Event
  captain: Player
  players: Player
  substitutes: Player
}

class News {
  id: integer
  title: string
  author: string
  date: datetime_immutable
  image: string
  excerpt: string
  content: text
}

class Player {
  id: integer
  pseudo: string
  avatar: string
  role: string
  grade: string
  game: string
  socials: json
  discordId: string
  roster: Roster
  user: User
}

class PlayerMatchStat {
  id: integer
  kills: integer
  deaths: integer
  player: Player
  match: GameMatch
}

class Roster {
  id: integer
  name: string
  game: string
  banner: string
  wins: integer
  losses: integer
  winrate: string
  players: Player
}

class Team {
  id: integer
  name: string
}

class User {
  id: integer
  username: string
  password: string
  discriminator: string
  avatar: string
  email: string
  roles: json
  lastLoginAt: datetime_immutable
  discordId: string
  discordName: string
  activitonId: string
  createdAt: datetime_immutable
  player: Player
}

Event "*" -- "1" Player : captain
Event "*" -- "*" Player : players
Event "*" -- "*" Player : substitutes
Event "1" -- "*" GameMatch : matches
GameMatch "*" -- "1" Team : teamA
GameMatch "*" -- "1" Team : teamB
GameMatch "*" -- "1" Roster : roster
GameMatch "*" -- "1" Event : tournament
GameMatch "*" -- "1" Player : captain
GameMatch "*" -- "*" Player : players
GameMatch "*" -- "*" Player : substitutes
Player "*" -- "1" Roster : roster
Player "1" -- "1" User : user
PlayerMatchStat "*" -- "1" Player : player
PlayerMatchStat "*" -- "1" GameMatch : match
Roster "1" -- "*" Player : players
User "1" -- "1" Player : player

@enduml
